[package]
name = "spot-messages"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0", features = ["serde"] }
helium-proto = {git = "https://github.com/helium/proto", branch = "lthiery/mapper-service", features = ["services"]}
h3o = "0"
rust_decimal = "1"
thiserror = "1"
modular-bitfield-msb = "0"

[dev-dependencies]
rand = "0"
