[package]
name = "spot-messages"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0", features = ["serde"] }
helium-crypto = "0.6"
helium-proto = { git = "https://github.com/helium/proto", branch = "lthiery/mapper-service", features = ["services"] }
h3o = "0"
modular-bitfield-msb = "0"
rust_decimal = "1"
rand = "0"
serde =  {version = "1", features = ["derive"] }
thiserror = "1"
